[package]
name = "ecosystem"
version = "0.1.0"
authors = ["cuisongliu <cuisongliu@qq.com>"]
edition = "2021"
description = "ecosystem, a rusty-hermit application"
repository = "https://github.com/rust-learn-days/ecosystem"
[dependencies]
serde_json = "1.0.120"
anyhow = "1.0.86"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
time = "0.3.36"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7.5"
tracing-appender = "0.2.3"
